# stride

./: .bazelrc  .bazelrc.local.example  .gitignore  .gitmodules  AGENTS.md  BUILD  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  Package.resolved  Package.swift  REPO.bazel  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
code/: Cargo.toml  build.rs  config.toml.example  main.rs
code/schema/: agent.capnp
code/src/: agent.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  persistence.rs  term.rs
code/src/agent/: local.rs  mod.rs
code/src/cli/: approval.rs  mod.rs  prompt.rs  term.rs  widget.rs
code/src/client/: mod.rs  popup.rs  sink.rs
code/src/daemon/: mod.rs  server.rs
code/src/tools/: base_agent.rs  explorer.rs  files.rs  mod.rs
libs/agent/: Cargo.toml
libs/agent/src/: base.rs  determinism.rs  events.rs  lib.rs  mcp.rs  memory.rs  prompt_template.rs  sanitizer.rs  tool.rs  tool_registry.rs
libs/agent/src/snapshots/: stride_agent__base__tests__text_turn_events.snap
libs/agent/src/tools/: arxiv.rs  bash.rs  calculator.rs  email.rs  expert.rs  explorer.rs  file.rs  firecrawl.rs  fzilla.rs  glob.rs  mod.rs  patch.rs  pubmed.rs  quiz.rs  search.rs  shell.rs  subagent.rs  uspto.rs  web_search.rs
libs/agent/tests/: bash_tool.rs  calculator_tool.rs  file_tool.rs  glob_tool.rs  patch_tool.rs  prompt_template.rs  quiz_tool.rs  shell_tool.rs  tool_desc.rs
libs/execenv/: Cargo.toml
libs/execenv/src/: artifacts.rs  bashkit_cmd.rs  command.rs  command_builtin.rs  execution_hub.rs  fonts.rs  lib.rs  typst_bridge.rs  typst_cmd.rs  typst_doc.rs
libs/execenv/tests/: command_builtin.rs  command_runner.rs
libs/fzilla/: Cargo.toml
libs/fzilla/src/: docx.rs  lib.rs  markdown.rs  pdf.rs  pptx.rs
libs/llm/: BUILD  Cargo.toml  README.md
libs/llm/src/: anthropic.rs  api.rs  completion_request.rs  lib.rs  mock.rs  ollama.rs  openai.rs  utils.rs
libs/llm/src/anthropic/: mod.rs  types.rs
libs/llm/src/net/: backend_fallback.rs  backend_kqueue.rs  backend_linux.rs  mod.rs  stream.rs
libs/llm/src/ollama/: mod.rs  types.rs
libs/llm/src/snapshots/: llm__completion_request__tests__tools.snap
libs/llm/src/types/: completion.rs  function.rs  image.rs  mod.rs  model.rs
libs/llm/tests/: e2e.rs
libs/minisql/: BUILD  Cargo.toml  README.md
libs/minisql-macros/: BUILD  Cargo.toml  README.md
libs/minisql-macros/src/: lib.rs
libs/minisql/src/: connection_pool.rs  dsl.rs  lib.rs  migration.rs  postgres.rs  query.rs  sql_builder.rs  sqlite.rs
libs/minisql/tests/: alter_table.rs  basic_insert_select.rs  dsl_select.rs  nullable_select.rs  postgres_smoke.rs  shared_schema.rs  update_delete.rs
libs/operator/: Cargo.toml
libs/operator/src/: ffi.rs  lib.rs
libs/pubsub/: Cargo.toml
libs/pubsub/src/: lib.rs  memory.rs  transport.rs
libs/tinynet/: Cargo.toml  README.md
libs/tinynet-core/: Cargo.toml
libs/tinynet-core/src/: buf.rs  client.rs  dns.rs  lib.rs  protocol.rs  tls.rs  utils.rs
libs/tinynet-core/src/client/: pool.rs
libs/tinynet-core/src/codec/: ndjson.rs  sse.rs
libs/tinynet-core/src/http/: body.rs  mod.rs  v1.rs  v1_conn.rs
libs/tinynet-core/src/reactor/: epoll.rs  io_uring.rs  kqueue.rs  mod.rs  timer.rs
libs/tinynet-core/src/sys/: mod.rs  unix.rs
libs/tinynet-core/src/tcp/: mod.rs
libs/tinynet-core/src/udp/: mod.rs
libs/tinynet/src/: lib.rs  stream.rs
libs/tinynet/tests/: e2e.rs
server/: .gitignore  BUILD  Cargo.toml  Package.resolved  Package.swift  build.rs  config.toml.example
server/Sources/server/: configure.swift  routes.swift
server/Sources/server/Auth/: APIKeyAuthenticator.swift  UserPayload.swift
server/Sources/server/Controllers/: APIKeyController.swift  AuthController.swift  ConversationController.swift  LLMController.swift  ProviderKeyController.swift
server/Sources/server/Extensions/: VaporConformances.swift
server/Tests/serverTests/: serverTests.swift
server/backend/: BUILD  auth_integration_test.rs  lib.rs  main.rs
server/backend/src/: auth.rs  config.rs  db.rs  frontend.rs  hybrid.rs  lib.rs  llm.rs  main.rs  rest_grpc.rs
server/backend/tests/: auth_integration_test.rs  llm_integration_test.rs
server/components/: BUILD  counter-button.ts  friday-auth-card.ts
server/execenv/: Cargo.toml
server/execenv/src/: lib.rs
server/frontend/: BUILD  app.ts  auth-grpc.js  auth-ui.css  build.mjs  dev.mjs  index.html  login.html  login.js  package-lock.json  package.json  playwright.config.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  register.html  register.js  showcase.html  ssr-components.txt  tsconfig.json
server/frontend/src/: auth-grpc.ts  auth-page.ts  main.ts  showcase.ts  widget-frame.ts
server/frontend/src/api/: auth.ts  (+6 more)
server/frontend/test/: components.test.mjs
server/skills/: document-reconstruct.md  inline-widget.md  pdf-report.md  pptx.md  report-writing.md  xlsx.md
server/src/: assets.rs  components.rs  components2.rs  config.rs  cron.rs  crypto.rs  db.rs  email.rs  github.rs  google.rs  icons.rs  main.rs  mcp_servers.rs  model_registry.rs  observability.rs  rate_limit.rs  scheduler.rs  user_events.rs
server/src/api/: agent_settings.rs  auth.rs  automations.rs  email.rs  events.rs  files.rs  github.rs  google.rs  images.rs  mcp.rs  memories.rs  mod.rs  models.rs  openai.rs  personal.rs  projects.rs  providers.rs  skills.rs  telegram.rs  thread_settings.rs  threads.rs  transcribe.rs  uploads.rs  user_models.rs  writable_dirs.rs
server/src/google/: api.rs  mime.rs  mod.rs
server/src/notify/: mod.rs  telegram.rs
server/src/pages/: agent.rs  archived.rs  auth.rs  automations.rs  files.rs  mod.rs  settings.rs
server/src/runner/: bootstrap.rs  inproc.rs  mod.rs  parts.rs  pool.rs  prompt.rs
server/src/tools/: attach_image.rs  automations.rs  google.rs  memory.rs  mod.rs  ocr.rs  personality.rs  presentation_draft.rs  projects.rs  python.rs  skills.rs  static_skills.rs  telegram.rs  vfs.rs
server/src/triggers/: cron.rs  mod.rs  vfs_change.rs  webhook.rs
server/src/vfs/: local.rs  mod.rs  mounted.rs
server/tests/: mcp_e2e.rs
(+477 files in other folders)
