module(name = "friday")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_prost", version = "0.69.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_js", version = "5.8.0")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.6")
bazel_dep(name = "rules_swift", version = "3.4.2", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "apple_support", version = "1.24.2", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.3.3", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "sourcekit_bazel_bsp", version = "0.7.1", repo_name = "sourcekit_bazel_bsp")
bazel_dep(name = "rules_xcodeproj", version = "3.6.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)

register_toolchains(
    "@//bazel/prost_toolchain",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    features = [
        "bundled",
        "extension",
    ],
    package = "sqlite",
    version = "0.37.0",
)
crate.spec(
    features = [
        "macros",
        "net",
        "rt",
        "rt-multi-thread",
        "sync",
        "time",
    ],
    package = "tokio",
    version = "1",
)
crate.spec(
    features = [
        "os-poll",
        "net",
    ],
    package = "mio",
    version = "1",
)
crate.spec(
    package = "parking_lot",
    version = "0.12.3",
)
crate.spec(
    features = [
        "serde",
        "v4",
        "v7",
    ],
    package = "uuid",
    version = "1.16.0",
)
crate.spec(
    package = "sqlite-vec",
    version = "0.1.6",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate.spec(
    package = "sqlparser",
    version = "0.57.0",
)
crate.spec(
    package = "proc-macro2",
    version = "1.0",
)
crate.spec(
    package = "quote",
    version = "1.0",
)
crate.spec(
    features = [
        "full",
        "parsing",
        "printing",
        "proc-macro",
    ],
    package = "syn",
    version = "2.0",
)
crate.spec(
    features = ["client"],
    package = "hyper",
    version = "1.8.1",
)
crate.spec(
    package = "thiserror",
    version = "1.0",
)
crate.spec(
    package = "serde_json",
    version = "1.0.140",
)
crate.spec(
    package = "http-body-util",
    version = "0.1",
)
crate.spec(
    package = "bytes",
    version = "1",
)
crate.spec(
    package = "hyper-rustls",
    version = "0.27.5",
)
crate.spec(
    package = "rustls",
    version = "0.23.37",
)
crate.spec(
    package = "rustls-aws-lc-rs",
    version = "0.0.1",
)
crate.spec(
    package = "hyper-util",
    version = "0.1",
)
crate.spec(
    package = "futures",
    version = "0.3.31",
)
crate.spec(
    package = "dispatch2",
    version = "0.3.1",
)
crate.spec(
    package = "async-stream",
    version = "0.3",
)
crate.spec(
    package = "ureq",
    version = "2",
)
crate.spec(
    package = "webpki-roots",
    version = "0.26",
)
crate.spec(
    features = [
        "tokio",
        "http1",
    ],
    package = "axum",
    version = "0.8.4",
)
crate.spec(
    features = [
        "cors",
        "fs",
    ],
    package = "tower-http",
    version = "0.6",
)
crate.spec(
    package = "argon2",
    version = "0.5.3",
)
crate.spec(
    package = "jsonwebtoken",
    version = "9.3.0",
)
crate.spec(
    features = [
        "cli",
        "tokio",
    ],
    package = "uniffi",
    version = "0.29.4",
)
crate.spec(
    package = "uniffi_bindgen",
    version = "0.29.4",
)
crate.spec(
    package = "camino",
    version = "1.2.2",
)
crate.spec(
    package = "insta",
    version = "1.46.3",
)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.14.5",
)
crate.spec(
    package = "tonic-prost",
    version = "0.14.5",
)
crate.spec(
    package = "prost",
    version = "0.14.3",
)
crate.spec(
    package = "prost-types",
    version = "0.14.3",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
crate.spec(
    package = "tower",
    version = "0.5.3",
)
crate.from_specs()
use_repo(crate, "crates")

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc_toolchains")

register_toolchains("@local_config_apple_cc_toolchains//:all")

bazel_dep(name = "rules_swift_package_manager", version = "1.13.0")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_package = False,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swiftpkg_fluent",
    "swiftpkg_fluent_sqlite_driver",
    "swiftpkg_swift_markdown",
    "swiftpkg_swift_syntax",
    "swiftpkg_yams",
)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
