[package]
name = "code"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
llm = { path = "../libs/llm" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal UI
crossterm = "0.28"

# JSON handling
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Directory handling
dirs = "5.0"

# Tracing
tracing-subscriber = "0.3"
