[package]
name = "code"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "stride"
path = "main.rs"

[dependencies]
# Internal
llm = { path = "../libs/llm" }
stride-agent = { path = "../libs/agent" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal UI
crossterm = { version = "0.28", features = ["event-stream"] }
termimad = "0.34.1"

# JSON handling
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Directory handling
dirs = "5.0"
uuid = { version = "1.11", features = ["v7"] }

# Tracing
tracing-subscriber = "0.3"

# Cap'n'Proto RPC
capnp = "0.20"
capnp-rpc = "0.20"

# Daemon management
tokio-util = { version = "0.7", features = ["compat"] }
minisql = { path = "../libs/minisql" }

[build-dependencies]
capnpc = "0.20"
cmake = "0.1"
