[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
argon2 = "0.5"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
handlebars = "6.4.0"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
jsonwebtoken = "9"
ldap3 = { version = "0.11", features = ["tls-native"] }
llm = { path = "../libs/llm" }
minisql = { path = "../libs/minisql" }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v7"] }
friday-agent = { path = "../libs/agent" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
