[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1"
argon2 = "0.5"
axum = { version = "0.8.9", features = ["ws", "multipart"] }
base64 = "0.22"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
execenv = { path = "../libs/execenv", features = ["eryx", "bashkit", "typst"] }
futures = "0.3.32"
hex = "0.4"
hmac = "0.12"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
include_dir = "0.7"
jsonwebtoken = "9"
ldap3 = { version = "0.11", features = ["tls-native"] }
llm = { path = "../libs/llm" }
mail-parser = { version = "0.11.3", features = ["full_encoding"] }
minisql = { path = "../libs/minisql" }
pubsub = { path = "../libs/pubsub" }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tinynet = { path = "../libs/tinynet" }
toml = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
tokio-native-tls = "0.3"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v7"] }
stride-agent = { path = "../libs/agent" }
bashkit = { version = "0.11.0", default-features = false }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
