[package]
name = "friday-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-macro = { path = "../agent-macro" }
llm = { path = "../llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
async-stream = "0.3.6"
async-trait = "0.1"
glob = "0.3.3"
patch = "0.7.0"
thiserror = "2.0.18"
tinynet = { path = "../tinynet" }
bytes = "1.11.1"
hyper = { version = "1.9.0", features = ["client"] }
http-body-util = "0.1.3"
