[package]
name = "stride-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-macro = { path = "../agent-macro" }
llm = { path = "../llm", package = "stride-llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
async-stream = "0.3.6"
async-trait = "0.1"
base64 = "0.22"
glob = "0.3.3"
patch = "0.7.0"
thiserror = "2.0.18"
tinynet = { path = "../tinynet", package = "stride-tinynet" }
bytes = "1.11.1"
hyper = { version = "1.9.0", features = ["client"] }
http-body-util = "0.1.3"
tracing = "0.1"
minisql = { path = "../minisql", package = "stride-minisql", default-features = false, features = ["sqlite"] }
uuid = { version = "1.23.1", features = ["v4", "v7"] }

[dev-dependencies]
futures = { version = "0.3.32", features = ["executor"] }
