[package]
name = "execenv"
version = "0.1.0"
edition = "2024"

[features]
default = []
eryx = ["dep:eryx", "dep:tempfile"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
bytes = "1.11.1"
flate2 = "1.1"
friday-agent = { path = "../agent" }
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "tls12", "rustls-native-certs", "aws-lc-rs"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
llm = { path = "../llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = { version = "3", optional = true }
tokio = { version = "1.52.3", features = ["fs", "macros", "sync", "time"] }
tracing = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies.eryx]
version = "0.4.9"
features = ["native-extensions", "preinit", "vfs"]
optional = true

[dev-dependencies]
tempfile = "3"
