[package]
name = "stride-llm"
version = "0.1.0"
edition = "2024"
description = "Unified async client for OpenAI, Anthropic, and Ollama chat completion, embedding, and transcription APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexbatashev/stride"
readme = "README.md"
authors = ["Alexander Batashev <alexbatashev@gmail.com>"]
keywords = ["llm", "openai", "anthropic", "ollama", "ai"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.87"

[lib]
name = "llm"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.11.1"
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server", "client"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tinynet = { path = "../tinynet", package = "stride-tinynet" }
uuid = {version = "1.23.1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
axum = { version = "0.8.9", features = ["http1"] }
insta = "1.47.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "net"] }
