[package]
name = "stride-minisql-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for stride-minisql: declarative, type-safe migration schemas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexbatashev/stride"
readme = "README.md"
authors = ["Alexander Batashev <alexbatashev@gmail.com>"]
keywords = ["sql", "macro", "migrations", "database"]
categories = ["database", "development-tools::procedural-macro-helpers"]
rust-version = "1.87"

[lib]
name = "minisql_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
