[package]
name = "minisql"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlite = { version = "0.37.0", features = ["bundled"] }
sqlite-vec = "0.1.9"
sqlparser = "0.61.0"
uuid = { version = "1.23.1", features = ["v4", "v7"] }
minisql-macros = { path = "../minisql-macros" }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt"] }
