[package]
name = "tinynet"
version = "0.1.1"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.11.1"
futures = "0.3.32"
http-body-util = "0.1.3"
hyper = "1.9.0"
thiserror = "2.0.18"
tinynet-core = { path = "../tinynet-core", features = ["client", "rustls"] }

[dev-dependencies]
axum = "0.8.7"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rcgen = "0.14.5"
rustls = "0.23.38"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "net"] }
