[package]
name = "tinynet"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.11.1"
futures = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
mio = { version = "1.2.0", features = ["os-poll", "net"] }
rustls = "0.23.38"
rustls-aws-lc-rs = "0.0.1"
thiserror = "2.0.18"
webpki-roots = "1.0.7"

[dev-dependencies]
axum = "0.8.7"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rcgen = "0.14.5"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "net"] }
