[package]
name = "execenv"
version = "0.1.0"
edition = "2024"

[features]
default = []
eryx = ["dep:eryx"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
flate2 = "1.1"
friday-agent = { path = "../../libs/agent" }
llm = { path = "../../libs/llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1.52.3", features = ["fs", "sync", "time"] }
tracing = "0.1"
ureq = { version = "3.3.0", default-features = false, features = ["gzip", "rustls"] }

[dependencies.eryx]
version = "0.4.9"
features = ["embedded-stdlib", "native-extensions", "preinit", "vfs"]
optional = true

[dev-dependencies]
tempfile = "3"
